# dep-agent

./: README.md  pyproject.toml
dep_agent/: __init__.py  agent.py  cli.py  scanner.py
