[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-agent-ai"
version = "0.1.0"
description = "AI-powered dependency update agent: scans lockfiles, reads changelogs, assesses upgrade risk, and drafts GitHub PRs using Claude."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "dep-agent contributors" },
]

keywords = ["dependencies", "security", "automation", "ai", "claude", "anthropic"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "anthropic>=0.40.0",
  "click>=8.0",
  "rich>=13.0",
  "requests>=2.28",
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.10",
  "responses>=0.23",
  "tomli>=2.0; python_version < '3.11'",
]
toml = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
dep-agent = "dep_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/dep-agent-ai"
Issues = "https://github.com/example/dep-agent-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["dep_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
